--- a/index.html
+++ b/index.html
@@ -7,5 +7,50 @@
 </head>
 <body>
 </h1>Strength and Conditioning Calculators</h1>
+<p>Use the following calculators to maximize your Health and Fitness goals</p>
+<div>
+<h2>One Rep Max Calculator</h2>
+<p>Calculate your estimated one rep max for any exercise</p>
+<form>
+    <label for="liftName"> Exercise Name</label><br>
+    <input type ="text" id ="liftName" name ="liftName"><br>
+    <label for="liftNumber"> Weight Lifted (lbs)</label><br>
+    <input type ="number" id="liftNumber" name ="liftNumber"><br>
+    <label for="liftReps"> Repetitions Completed</label><br>
+    <input type ="number" id="liftReps" name = "liftReps"><br>
+    <label for="submitRep">Submit:</label><br>
+    <input type ="button" id="submitRep" name = "submitRep"><br>
+</form>
+</div>
+<div>
+<h2>VO2 Max Calculator</h2>
+<p>Calculate your VO2 Max in Running, Swimming, or Cycling</p>
+<select name="modality" id="modality">
+    <option value="running">Running</option>
+    <option value="swimming">Swimming</option>
+    <option value="cycling">Cycling</option>
+</select>
+<form>
+    <label>Finishing Time</label><br>
+    <label for="exerciseHour">Hours:</label>
+    <input type="number" id="exerciseHour" name="exercisehour">
+    <label for="exerciseMin">Minutes:</label>
+    <input type="number" id="exerciseMin" name="exerciseMin">
+    <label for="exerciseSec">Seconds:</label>
+    <input type="number" id="exerciseSec" name="exerciseSec">
+</form>
+</div>
+<div>
+<h2>US Navy PRT Calculator</h2>
+<p>Calculate your US Navy PRT score</p>
+<select name="maleFemale" id="maleFemale">
+    <option value="Male">Male</option>
+    <option value="Female">Female</option>
+</select>
+</div>
+<div>
+<h2>BMI Calculator</h2>
+<p>Calculate your BMI based on your height and weight</p>
+</div>
 </body>
 </html>
